vendor/cargo/parameterized-macro-2.0.0/tests/ok/15_comment_in_test_case.rs
use parameterized_macro::parameterized;

#[parameterized(
    v = {"a", "b"},     // test with &str inputs
    w = {1, 2}          // test with i32 inputs
)]
fn my_test(v: &str, w: i32) {}

fn main() {}
