vendor/cargo/parameterized-macro-2.0.0/tests/fail/input_param_order_in_err_message.rs
use parameterized_macro::parameterized;

#[parameterized(zzz = { "a", "b" }, aaa = { 1, 2, 3 })]
pub(crate) fn my_test(v: &str, w: i32) {}

fn main() {}
